--- a/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -49,7 +49,9 @@
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true">
         <link href="~/css/themes/all-themes.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/view-resources/Views/Shared/_Layout.css" rel="stylesheet" asp-append-version="true" />
-    </environment>
+        <link href="~/lib/jquery-easyui-1.8.1/themes/default/easyui.css" type="text/css" rel="stylesheet" />
+        
+</environment>
 
     <environment names="Staging,Production">
         <link href="~/view-resources/Views/_Bundles/shared-layout.min.css" rel="stylesheet" asp-append-version="true" />
@@ -87,16 +89,8 @@
     <!-- Overlay For Sidebars -->
     <div class="overlay"></div>
     <!-- #END# Overlay For Sidebars -->
-    <!-- Search Bar -->
-    <div class="search-bar">
-        <div class="search-icon">
-            <i class="material-icons">search</i>
-        </div>
-        <input type="text" placeholder="@L("StartTyping")...">
-        <div class="close-search">
-            <i class="material-icons">close</i>
-        </div>
-    </div>
+
+
     <!-- #END# Search Bar -->
     <!-- Top Bar -->
     <nav class="navbar">
@@ -108,10 +102,7 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <!-- Call Search -->
-                    <li><a href="javascript:void(0);" class="js-search" data-close="true"><i class="material-icons">search</i></a></li>
-                    <!-- #END# Call Search -->
-
+                    <li class="pull-right"><a href="/Account/Logout" >登出</a></li>
                     @await Component.InvokeAsync(typeof(TopBarLanguageSwitchViewComponent))
 
                     <li class="pull-right"><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="material-icons">more_vert</i></a></li>
@@ -123,19 +114,29 @@
     <section>
         <aside id="leftsidebar" class="sidebar">
 
-            @await Component.InvokeAsync(typeof(SideBarUserAreaViewComponent))
-            @await Component.InvokeAsync(typeof(SideBarNavViewComponent), new { activeMenu = ViewBag.CurrentPageName })
-
-            <!-- Footer -->
-            <div class="legal">
-                <div class="copyright">
-                    &copy; @DateTime.Now.Year <a href="javascript:void(0);">StockSystem</a>.
-                </div>
-                <div class="version">
-                    <b>@L("Version") </b> @AppVersionHelper.Version [@AppVersionHelper.ReleaseDate.ToString("yyyyMMdd")]
-                </div>
+            <div class="easyui-panel" style="padding:5px">
+                <ul class="easyui-tree">
+                    <li data-options="state:'closed'">
+                        <span>用户/角色管理</span>
+                        <ul>
+                            <li><a href="/Users">@L("Users")</a></li>
+                            <li><a href="/Roles">@L("Roles")</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>进驻销管理</span>
+                        <ul>
+                            <li><a>货物管理</a></li>
+                            <li><a>供应商管理</a></li>
+                            <li><a>客户管理</a></li>
+                            <li><a>库存</a></li>
+                            <li><a>入库记录</a></li>
+                            <li><a>出库记录</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-            <!-- #Footer -->
+
         </aside>
 
         @await Component.InvokeAsync(typeof(RightSideBarViewComponent))
@@ -191,11 +192,12 @@
         <script src="~/js/admin.js" asp-append-version="true"></script>
         <script src="~/js/main.js" asp-append-version="true"></script>
         <script src="~/view-resources/Views/Shared/_Layout.js" asp-append-version="true"></script>
-
         @if (CultureInfo.CurrentUICulture.Name != "en")
         {
             <script src="~/lib/jquery-validation/src/localization/messages_@Html.Raw(CultureInfo.CurrentUICulture.Name.Replace("-", "_") + ".js")" asp-append-version="true"></script>
         }
+        <!--引入easyui-->
+        <script src="~/lib/jquery-easyui-1.8.1/jquery.easyui.min.js" asp-append-version="true"></script>
     </environment>
 
     <environment names="Staging,Production">
