完成了供应商增删改查

--- a/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@
                         <span>进驻销管理</span>
                         <ul>
                             <li><a asp-controller="Goods" asp-action="Index">货物管理</a></li>
-                            <li><a>供应商管理</a></li>
+                            <li><a asp-controller="Suppliers" asp-action="Index">供应商管理</a></li>
                             <li><a>客户管理</a></li>
                             <li><a>库存</a></li>
                             <li><a>入库记录</a></li>
