--- a/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -129,10 +129,10 @@
                         <ul>
                             <li><a asp-controller="Goods" asp-action="Index">货物管理</a></li>
                             <li><a asp-controller="Suppliers" asp-action="Index">供应商管理</a></li>
-                            <li><a>客户管理</a></li>
-                            <li><a>库存</a></li>
-                            <li><a>入库记录</a></li>
-                            <li><a>出库记录</a></li>
+                            <li><a asp-controller="Customers" asp-action="Index">客户管理</a></li>
+                            <li><a asp-controller="Stockings" asp-action="Index">货物库存</a></li>
+                            <li><a>货物入库</a></li>
+                            <li><a>货物出库</a></li>
                         </ul>
                     </li>
                 </ul>
