前端：入库（还未全部完成）

--- a/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@
                             <li><a asp-controller="Suppliers" asp-action="Index">供应商管理</a></li>
                             <li><a asp-controller="Customers" asp-action="Index">客户管理</a></li>
                             <li><a asp-controller="Stockings" asp-action="Index">货物库存</a></li>
-                            <li><a>货物入库</a></li>
+                            <li><a asp-controller="InStock" asp-action="Index">货物入库</a></li>
                             <li><a>货物出库</a></li>
                         </ul>
                     </li>
