获取当前用户完成

--- a/src/StockSystem.Web.Mvc/Views/InStock/Index.cshtml
+++ b/src/StockSystem.Web.Mvc/Views/InStock/Index.cshtml
@@ -52,7 +52,8 @@
                 <td>
                     <div class="fitem">
                         <label>操作人:　</label>
-                        <input name="user" class="easyui-validatebox" required="true">
+                        <input type="hidden" id="op_user_id" name="user">
+                        <input id="op_user" name="user_name" disabled class="easyui-validatebox" required="true">
                     </div>
                 </td>
 
