--- a/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/StockSystem.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="pull-right"><a href="/Account/Logout" >登出</a></li>
+                    <li class="pull-right"><a asp-controller="Account" asp-action="Logout" >登出</a></li>
                     @await Component.InvokeAsync(typeof(TopBarLanguageSwitchViewComponent))
 
                     <li class="pull-right"><a href="javascript:void(0);" class="js-right-sidebar" data-close="true"><i class="material-icons">more_vert</i></a></li>
